[package]
name = "thiserror_string_context_macro"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Macro crate for thiserror_string_context"
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
syn = {version="2.0", features = ["full"]}
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true